--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,4 +1,4 @@
-before_install:
+install:
 - git clone git://github.com/timburks/nu.git
 - cd nu; make; mininush tools/nuke install
 language: objective-c
