--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ before_script:
  - pwd
  - mkdir tmp
  - cd tmp; git clone git://github.com/timburks/nu.git
- - cd tmp/nu; make; mininush tools/nuke install
+ - cd nu; make; ./mininush tools/nuke install
